--- a/DbAdapter/DbAdapter.csproj
+++ b/DbAdapter/DbAdapter.csproj
@@ -42,8 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDbAdapter.cs" />
+    <Compile Include="DbInsertable.cs" />
+    <Compile Include="OrderByType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryModel.cs" />
+    <Compile Include="DbQueryable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
